<resources>
    <string name="app_name">AvaliaBus</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>
    <string name="action_logout">Sair</string>
    <string name="title_activity_home2">Home2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="tv_registro">Cadastre-se</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="login">Login</string>
    <string name="repeti_senha">Repira a senha</string>
    <string name="btn_registro">Registro</string>
    <string name="nome">Nome</string>
    <string name="title_activity_drawer">AvaliaBus</string>
    <string name="onibus">Ônibus</string>
    <string name="onibus_sujo">O ônibus está sujo</string>
    <string name="onibus_janelas_quebradas">Existe uma ou mais janelas danificadas</string>
    <string name="onibus_assentos_quebrados">O ônibus contém assentos quebrados</string>
    <string name="onibus_lampadas_queimadas">Uma ou mais lâmpadas estão queimadas</string>
    <string name="motorista">Motorista</string>
    <string name="seguranca">Segurança</string>
    <string name="motorista_nao_parou">O motorista não parou no ponto</string>
    <string name="motorista_celular">Falando no celular enquanto dirige</string>
    <string name="motorista_freou_bruscamente">O motorista freou bruscamente</string>
    <string name="motorista_velocidade_permitida">Dirigindo acima da velocidade permitida</string>
    <string name="onibus_assaltado">O ônibus foi assaltado/furtado</string>
    <string name="atos_vandalismo">Atos de vandalismo</string>
    <string name="brigas_onibus">Brigas no coletivo</string>
    <string name="onibus_quebrou">O ônibus quebrou</string>
    <string name="linha">Linha</string>
    <string name="percurso_longo">O percurso da linha é muito longo</string>
    <string name="linha_areas_arriscadas">O ônibus passa por áreas de risco</string>
    <string name="linha_assaltada_constantemente">Linha assaltada constantemente</string>
    <string name="enviar">Enviar</string>
    <string name="numero_onibus">Número do ônibus</string>
    <string name="numero_linha">Número da linha</string>
    <string name="observacoes">Observações</string>
    <string name="tv_login">Login</string>
    <string name="btn_esqueci_senha">Redefinir senha</string>
    <string name="cidades">Cidades</string>
    <string name="cidade">Cidade</string>
    <string name="cb_onibus_lotado">Ônibus superlotado</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_about">Sobre</string>
    <string name="action_refresh">Refresh</string>
    <string name="tv_linha_mais_avaliada">Linha mais avaliada:</string>
    <string name="tv_quantidade_de_avalia_es_realizadas">Quantidade de avaliações realizadas:</string>
    <string name="data_da_ultima_avaliacao">Data da última avaliação:</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registrar">Registrar</string>
    <string name="historico">Histórico</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="navigation_user">Meu usuário</string>
    <string name="toast_exception_new_image">Algo deu errado ao tentar salvar o arquivo:</string>
</resources>
